# csp-volume-rendering

./: CMakeLists.txt  README.md
data/spaceweather/: dummy_0.csv  dummy_0.vtk  dummy_1.vtk  dummy_2.vtk  dummy_3.vtk  dummy_4.vtk  dummy_5.vtk
gui/: volume_rendering_settings.html  volume_rendering_tab-lite.html  volume_rendering_tab.html
gui/css/: csp-volume-rendering.css  transfer_function_editor.css
gui/js/: csp-volume-rendering-lite.js  csp-volume-rendering.js  mantle_resample_100.js  parcoords.js  pathlines.js  transfer_function_editor.js
ospray_modules/: CMakeLists.txt
ospray_modules/volume_depth/ospray/: moduleInit.cpp
ospray_modules/volume_depth/ospray/math/: halton.ispc  sobol.ispc
ospray_modules/volume_depth/ospray/render/: VolumeDepth.cpp  VolumeDepth.hpp  VolumeDepth.ih  VolumeDepth.ispc  lightAlpha.ispc  surfaces.ih  surfaces.ispc  volumes.ih  volumes.ispc
scripts/: derived.py  metadata.py
src/: Billboard.cpp  Billboard.hpp  DataManager.cpp  DataManager.hpp  Enums.hpp  OSPRayRenderer.cpp  OSPRayRenderer.hpp  OSPRayUtility.cpp  OSPRayUtility.hpp  Pathlines.cpp  Pathlines.hpp  Plugin.cpp  Plugin.hpp  Renderer.cpp  Renderer.hpp  Settings.cpp  Settings.hpp  Utility.cpp  Utility.hpp  logger.cpp  logger.hpp
src/Data/: DataManager.cpp  DataManager.hpp  FileLoader.hpp  GaiaDataManager.cpp  GaiaDataManager.hpp  NetCdfDataManager.cpp  NetCdfDataManager.hpp  NetCdfFileLoader.cpp  NetCdfFileLoader.hpp  Pathlines.cpp  Pathlines.hpp  Scalar.hpp  VtkDataManager.cpp  VtkDataManager.hpp  VtkFileLoader.cpp  VtkFileLoader.hpp
src/Display/: Billboard.cpp  Billboard.hpp  DepthExtractor.cpp  DepthExtractor.hpp  DisplayNode.cpp  DisplayNode.hpp  Functors.cu  Functors.hpp  IrregularGrid.cpp  IrregularGrid.hpp  PointsForwardWarped.cpp  PointsForwardWarped.hpp  RegularGridBuffers.cpp  RegularGridBuffers.hpp  Shaders.hpp  SurfaceDetectionBuffer.cpp  SurfaceDetectionBuffer.cu  SurfaceDetectionBuffer.hpp
src/Render/: DataManager.cpp  DataManager.hpp  OSPRayRenderer.cpp  OSPRayRenderer.hpp  OSPRayUtility.cpp  OSPRayUtility.hpp  Renderer.cpp  Renderer.hpp  WebRTCRenderer.cpp  WebRTCRenderer.hpp
src/Render/WebRTCUtility/: Connection.cpp  Connection.hpp  DataChannel.cpp  DataChannel.hpp  GstDeleters.hpp  LICENSE  SignallingServer.cpp  SignallingServer.hpp  Stream.cpp  Stream.hpp
transferfunctions/: BlackBody.json
